add questions and answer functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p class="time">Time Remaining:</p>
     </header>
     <main>
-        <div class="start-quiz">
+        <div class="start-quiz container">
             <h1>Coding Quiz</h1>
             <p>Try to answer as many questions as you can before time runs out! If you get a question wrong you will lose time.</p>
             <button class="start">Start Quiz</button>
