add styling and updated highscore page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="start-quiz container">
             <h1>Coding Quiz</h1>
-            <p>Try to answer as many questions as you can before time runs out! If you get a question wrong you will lose time.</p>
+            <p>Try to answer as many questions as you can before time runs out! If you get a question wrong you will be penalized 5 seconds off of your time.</p>
             <button class="start">Start Quiz</button>
         </div>
     </main>
